--- a/國禎履歷.css
+++ b/國禎履歷.css
@@ -11,7 +11,9 @@
 .header{
     height: 50px;
     background-color: black;
-    position: relative;
+    position: fixed;
+    width: 100%;
+    z-index: 999;
 }
 .menu_btn{
     width: 40px;
@@ -85,31 +87,37 @@ nav a{
     }
 }
 .content-1{
-    width: 100%;
+    max-width: 100%;
     height: 100vh;
     background-image: url("img1.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
-    text-align: right;
     position: relative;
 }
 .content-1 h2{
     font-size: 70px;
     color: white;
     position: absolute;
-    top: 150px;
-    right: 940px;
+    top: 30%;
+    right: 60%;
 }
 .content-1 p{
     font-size: 30px;
     color: white;
     position: absolute;
-    top: 360px;
-    left: 250px;
-    text-align: left;
+    top: 55%;
+    left: 20%;
     line-height: 2;
+}
+@media screen and (max-width:768px) {
+    .content-1 h2{
+        font-size: 35px;
+    }
+    .content-1 p{
+        font-size: 20px;
+    }
 }
 .content-2{
     display: flex;
@@ -118,15 +126,15 @@ nav a{
 .content-2 .pic{
     width: 50%;
     text-align: center;
-    margin: 200px 0px;
+    margin: 150px 0px;
 }
 .content-2 .introduce{
     width: 50%;
     text-align: left;
-    margin: 200px 0px;
+    margin: 150px 0px;
 }
 .pic img{
-    width: 400px;
+    max-width: 400px;
     border-radius: 50%;
 }
 .content-2 h3{
@@ -134,8 +142,26 @@ nav a{
     margin-bottom: 40px;
 }
 .content-2 p{
-    font-size: 25px;
-    line-height: 2;
+    font-size: 20px;
+    line-height: 1.8;
+    color: rgba(32, 32, 32, 0.574);
+}
+@media screen and (max-width:768px) {
+    .content-2{
+        display: block;
+    }
+    .content-2 .pic{
+        width: 100%;
+    }
+    .content-2 .introduce{
+        width: 100%;
+    }
+    .content-2 h3{
+        text-align: center;
+    }
+    .content-2 p{
+        text-align: center;
+    }
 }
 .content-3{
     width: 1350px;
@@ -144,7 +170,6 @@ nav a{
     display: flex;
 }
 .content-3 .wrap{
-    height: 600px;
     margin: 20px;
     box-shadow: 0px 0px 10px gray;
     border-radius: 1%;
@@ -172,16 +197,39 @@ nav a{
     margin-top: 15px;
     line-height: 2;
 }
+@media screen and (max-width:768px) {
+    .content-3{
+        display: block;
+        width: 100%;
+    }
+    .content-3 .SP{
+        width: 100%;
+        margin: 0px;
+    }
+    .content-3 .PP{
+        width: 100%;
+        margin: 0px;
+    }
+    .content-3 .DP{
+        width: 100%;
+        margin: 0px;
+    }
+    .content-3 .text{
+        text-align: center;
+    }
+}
 .footer{
-    display: flex;
-    width: 100%;
+    max-width: 100%;
     background-image: url("img2.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
-    justify-content: center;
     margin-top: 100px;
+}
+.content-4{
+    display: flex;
+    justify-content: center;
 }
 .footer .contact{
     width: 33.333%;
@@ -201,21 +249,52 @@ nav a{
 .contact-item{
     display: flex;
     margin: 20px 0;
-    
+}
+.contact .img{
+    max-width: 100%;
 }
 .contact img{
     width: 60px;
     padding-right: 30px;
-    
+    margin-top: 10px;
 }
 .contact-item .text{
-    padding-top: 5px;
+    margin-top: 8px;
     font-size: 20px;
 }
-.contact-button a{
+.contact-button li a{
+    color: black;
+    font-size: 20px;
     display: block;
     line-height: 2;
-    font-size: 20px;
-    color: black;
-    margin-top: 4px;
+    margin-top: 8px;
+}
+.footer > .author{
+    text-align: center;
+    color: white;
+}
+@media screen and (max-width:768px) {
+    .footer .content-4{
+        display: block;
+    }
+    .footer .contact{
+        width: 100%;
+    }
+    .footer .contact-button{
+        display: none;
+    }
+    .contact-item{
+        display: block;
+    }
+    .contact .img{
+        text-align: center;
+    }
+    .contact img{
+        width: 60px;
+        padding-right: 0;
+    }
+    .contact .text{
+        font-size: 20px;
+        text-align: center;
+    }
 }
